# Coursework_3

./: .gitignore  README.md  pyproject.toml
src/: amount.py  currency.py  main.py  operation.py  utils.py
tests/: conftest.py  test_operation.py  test_utils.py
